// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`channels does not render chat if chat is available 1`] = `
.c0 {
  display: inline-block;
  white-space: pre-wrap;
  border-radius: 1.1428571428571428rem;
  margin-left: 2.857142857142857rem;
  border-left: 0.07142857142857142rem #eee solid;
  border-right: 0.07142857142857142rem #eee solid;
  margin-bottom: 0.5rem;
  max-width: 15.642857142857142rem;
}

.c2 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
}

.c2:hover {
  background-color: #f8f8f8;
}

.c1 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
  border-top: 0.07142857142857142rem $zd-color-platinum solid;
  border-top-left-radius: 1.1428571428571428rem;
  border-top-right-radius: 1.1428571428571428rem;
  background: #f3f3f3;
  color: #333;
  padding: 0.6428571428571429rem 0.7142857142857143rem 0.5714285714285714rem;
  line-height: 1.0714285714285714rem;
}

.c1:hover {
  background-color: #f8f8f8;
}

<div>
  <div
    class="c0"
    data-testid="answer-bot-selection-message"
  >
    <div
      class="c1"
    >
      Would you like to leave a message so the team can follow up on your question?
    </div>
    <div
      class="c2"
    >
      <div
        class="channel singleChannel"
        data-testid="list-item"
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-contactForm"
          data-testid="Icon--channelChoice-contactForm"
          type="Icon--channelChoice-contactForm"
        >
          <svg
            aria-hidden="true"
            realfilename="widget-icon_channelChoice-contactForm.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Leave a message
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`channels renders expected components if chat and chat offline are available 1`] = `
.c0 {
  display: inline-block;
  white-space: pre-wrap;
  border-radius: 1.1428571428571428rem;
  margin-left: 2.857142857142857rem;
  border-left: 0.07142857142857142rem #eee solid;
  border-right: 0.07142857142857142rem #eee solid;
  margin-bottom: 0.5rem;
  max-width: 15.642857142857142rem;
}

.c2 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
}

.c2:hover {
  background-color: #f8f8f8;
}

.c1 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
  border-top: 0.07142857142857142rem $zd-color-platinum solid;
  border-top-left-radius: 1.1428571428571428rem;
  border-top-right-radius: 1.1428571428571428rem;
  background: #f3f3f3;
  color: #333;
  padding: 0.6428571428571429rem 0.7142857142857143rem 0.5714285714285714rem;
  line-height: 1.0714285714285714rem;
}

.c1:hover {
  background-color: #f8f8f8;
}

<div>
  <div
    class="c0"
    data-testid="answer-bot-selection-message"
  >
    <div
      class="c1"
    >
      blah
    </div>
    <div
      class="c2"
    >
      <div
        class="channel singleChannel"
        data-testid="list-item"
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-chat"
          data-testid="Icon--channelChoice-chat"
          type="Icon--channelChoice-chat"
        >
          <svg
            aria-hidden="true"
            realfilename="widget-icon_channelChoice-chat.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Live chat is offline
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`channels renders expected components if only call us is available 1`] = `
.c0 {
  display: inline-block;
  white-space: pre-wrap;
  border-radius: 1.1428571428571428rem;
  margin-left: 2.857142857142857rem;
  border-left: 0.07142857142857142rem #eee solid;
  border-right: 0.07142857142857142rem #eee solid;
  margin-bottom: 0.5rem;
  max-width: 15.642857142857142rem;
}

.c2 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
}

.c2:hover {
  background-color: #f8f8f8;
}

.c1 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
  border-top: 0.07142857142857142rem $zd-color-platinum solid;
  border-top-left-radius: 1.1428571428571428rem;
  border-top-right-radius: 1.1428571428571428rem;
  background: #f3f3f3;
  color: #333;
  padding: 0.6428571428571429rem 0.7142857142857143rem 0.5714285714285714rem;
  line-height: 1.0714285714285714rem;
}

.c1:hover {
  background-color: #f8f8f8;
}

<div>
  <div
    class="c0"
    data-testid="answer-bot-selection-message"
  >
    <div
      class="c1"
    >
      blah
    </div>
    <div
      class="c2"
    >
      <div
        class="channel singleChannel"
        data-testid="list-item"
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-talk"
          data-testid="Icon--channelChoice-talk"
          type="Icon--channelChoice-talk"
        >
          <svg
            aria-hidden="true"
            realfilename="widget-icon_channelChoice-talk.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Call us
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`channels renders expected components if only chat is available 1`] = `
.c0 {
  display: inline-block;
  white-space: pre-wrap;
  border-radius: 1.1428571428571428rem;
  margin-left: 2.857142857142857rem;
  border-left: 0.07142857142857142rem #eee solid;
  border-right: 0.07142857142857142rem #eee solid;
  margin-bottom: 0.5rem;
  max-width: 15.642857142857142rem;
}

.c2 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
}

.c2:hover {
  background-color: #f8f8f8;
}

.c1 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
  border-top: 0.07142857142857142rem $zd-color-platinum solid;
  border-top-left-radius: 1.1428571428571428rem;
  border-top-right-radius: 1.1428571428571428rem;
  background: #f3f3f3;
  color: #333;
  padding: 0.6428571428571429rem 0.7142857142857143rem 0.5714285714285714rem;
  line-height: 1.0714285714285714rem;
}

.c1:hover {
  background-color: #f8f8f8;
}

<div>
  <div
    class="c0"
    data-testid="answer-bot-selection-message"
  >
    <div
      class="c1"
    >
      blah
    </div>
    <div
      class="c2"
    >
      <div
        class="channel singleChannel"
        data-testid="list-item"
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-chat"
          data-testid="Icon--channelChoice-chat"
          type="Icon--channelChoice-chat"
        >
          <svg
            aria-hidden="true"
            realfilename="widget-icon_channelChoice-chat.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Live chat
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`channels renders expected components if only submit ticket is available 1`] = `
.c0 {
  display: inline-block;
  white-space: pre-wrap;
  border-radius: 1.1428571428571428rem;
  margin-left: 2.857142857142857rem;
  border-left: 0.07142857142857142rem #eee solid;
  border-right: 0.07142857142857142rem #eee solid;
  margin-bottom: 0.5rem;
  max-width: 15.642857142857142rem;
}

.c2 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
}

.c2:hover {
  background-color: #f8f8f8;
}

.c1 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
  border-top: 0.07142857142857142rem $zd-color-platinum solid;
  border-top-left-radius: 1.1428571428571428rem;
  border-top-right-radius: 1.1428571428571428rem;
  background: #f3f3f3;
  color: #333;
  padding: 0.6428571428571429rem 0.7142857142857143rem 0.5714285714285714rem;
  line-height: 1.0714285714285714rem;
}

.c1:hover {
  background-color: #f8f8f8;
}

<div>
  <div
    class="c0"
    data-testid="answer-bot-selection-message"
  >
    <div
      class="c1"
    >
      blah
    </div>
    <div
      class="c2"
    >
      <div
        class="channel singleChannel"
        data-testid="list-item"
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-contactForm"
          data-testid="Icon--channelChoice-contactForm"
          type="Icon--channelChoice-contactForm"
        >
          <svg
            aria-hidden="true"
            realfilename="widget-icon_channelChoice-contactForm.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Leave a message
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`channels renders expected components if talk and click to call are available 1`] = `
.c0 {
  display: inline-block;
  white-space: pre-wrap;
  border-radius: 1.1428571428571428rem;
  margin-left: 2.857142857142857rem;
  border-left: 0.07142857142857142rem #eee solid;
  border-right: 0.07142857142857142rem #eee solid;
  margin-bottom: 0.5rem;
  max-width: 15.642857142857142rem;
}

.c2 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
}

.c2:hover {
  background-color: #f8f8f8;
}

.c1 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
  border-top: 0.07142857142857142rem $zd-color-platinum solid;
  border-top-left-radius: 1.1428571428571428rem;
  border-top-right-radius: 1.1428571428571428rem;
  background: #f3f3f3;
  color: #333;
  padding: 0.6428571428571429rem 0.7142857142857143rem 0.5714285714285714rem;
  line-height: 1.0714285714285714rem;
}

.c1:hover {
  background-color: #f8f8f8;
}

<div>
  <div
    class="c0"
    data-testid="answer-bot-selection-message"
  >
    <div
      class="c1"
    >
      blah
    </div>
    <div
      class="c2"
    >
      <div
        class="channel singleChannel"
        data-testid="list-item"
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-clickToCall"
          data-testid="Icon--channelChoice-clickToCall"
          type="Icon--channelChoice-clickToCall"
        >
          <svg
            aria-hidden="true"
            realfilename="click_to_call.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Click to call
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`channels renders expected components if talk and request callback are available 1`] = `
.c0 {
  display: inline-block;
  white-space: pre-wrap;
  border-radius: 1.1428571428571428rem;
  margin-left: 2.857142857142857rem;
  border-left: 0.07142857142857142rem #eee solid;
  border-right: 0.07142857142857142rem #eee solid;
  margin-bottom: 0.5rem;
  max-width: 15.642857142857142rem;
}

.c2 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
}

.c2:hover {
  background-color: #f8f8f8;
}

.c1 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
  border-top: 0.07142857142857142rem $zd-color-platinum solid;
  border-top-left-radius: 1.1428571428571428rem;
  border-top-right-radius: 1.1428571428571428rem;
  background: #f3f3f3;
  color: #333;
  padding: 0.6428571428571429rem 0.7142857142857143rem 0.5714285714285714rem;
  line-height: 1.0714285714285714rem;
}

.c1:hover {
  background-color: #f8f8f8;
}

<div>
  <div
    class="c0"
    data-testid="answer-bot-selection-message"
  >
    <div
      class="c1"
    >
      blah
    </div>
    <div
      class="c2"
    >
      <div
        class="channel singleChannel"
        data-testid="list-item"
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-talk"
          data-testid="Icon--channelChoice-talk"
          type="Icon--channelChoice-talk"
        >
          <svg
            aria-hidden="true"
            realfilename="widget-icon_channelChoice-talk.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Request a callback
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`channels renders generic leading message if more than 1 channel is available 1`] = `
.c0 {
  display: inline-block;
  white-space: pre-wrap;
  border-radius: 1.1428571428571428rem;
  margin-left: 2.857142857142857rem;
  border-left: 0.07142857142857142rem #eee solid;
  border-right: 0.07142857142857142rem #eee solid;
  margin-bottom: 0.5rem;
  max-width: 15.642857142857142rem;
}

.c2 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
}

.c2:hover {
  background-color: #f8f8f8;
}

.c1 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
  border-top: 0.07142857142857142rem $zd-color-platinum solid;
  border-top-left-radius: 1.1428571428571428rem;
  border-top-right-radius: 1.1428571428571428rem;
  background: #f3f3f3;
  color: #333;
  padding: 0.6428571428571429rem 0.7142857142857143rem 0.5714285714285714rem;
  line-height: 1.0714285714285714rem;
}

.c1:hover {
  background-color: #f8f8f8;
}

<div>
  <div
    class="c0"
    data-testid="answer-bot-selection-message"
  >
    <div
      class="c1"
    >
      Choose a way to get in touch:
    </div>
    <div
      class="c2"
    >
      <div
        class="channel "
        data-testid="list-item"
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-chat"
          data-testid="Icon--channelChoice-chat"
          type="Icon--channelChoice-chat"
        >
          <svg
            aria-hidden="true"
            realfilename="widget-icon_channelChoice-chat.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Live chat
        </div>
      </div>
    </div>
    <div
      class="c2"
    >
      <div
        class="channel "
        data-testid="list-item"
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-talk"
          data-testid="Icon--channelChoice-talk"
          type="Icon--channelChoice-talk"
        >
          <svg
            aria-hidden="true"
            realfilename="widget-icon_channelChoice-talk.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Call us
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`channels renders leading message if more than 1 channel is available and useLeadingMessageAsFallback is true 1`] = `
.c0 {
  display: inline-block;
  white-space: pre-wrap;
  border-radius: 1.1428571428571428rem;
  margin-left: 2.857142857142857rem;
  border-left: 0.07142857142857142rem #eee solid;
  border-right: 0.07142857142857142rem #eee solid;
  margin-bottom: 0.5rem;
  max-width: 15.642857142857142rem;
}

.c2 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
}

.c2:hover {
  background-color: #f8f8f8;
}

.c1 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
  border-top: 0.07142857142857142rem $zd-color-platinum solid;
  border-top-left-radius: 1.1428571428571428rem;
  border-top-right-radius: 1.1428571428571428rem;
  background: #f3f3f3;
  color: #333;
  padding: 0.6428571428571429rem 0.7142857142857143rem 0.5714285714285714rem;
  line-height: 1.0714285714285714rem;
}

.c1:hover {
  background-color: #f8f8f8;
}

<div>
  <div
    class="c0"
    data-testid="answer-bot-selection-message"
  >
    <div
      class="c1"
    >
      hi
    </div>
    <div
      class="c2"
    >
      <div
        class="channel "
        data-testid="list-item"
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-chat"
          data-testid="Icon--channelChoice-chat"
          type="Icon--channelChoice-chat"
        >
          <svg
            aria-hidden="true"
            realfilename="widget-icon_channelChoice-chat.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Live chat
        </div>
      </div>
    </div>
    <div
      class="c2"
    >
      <div
        class="channel "
        data-testid="list-item"
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-talk"
          data-testid="Icon--channelChoice-talk"
          type="Icon--channelChoice-talk"
        >
          <svg
            aria-hidden="true"
            realfilename="widget-icon_channelChoice-talk.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Call us
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`channels renders the passed in leading message regardless of other properties 1`] = `
.c0 {
  display: inline-block;
  white-space: pre-wrap;
  border-radius: 1.1428571428571428rem;
  margin-left: 2.857142857142857rem;
  border-left: 0.07142857142857142rem #eee solid;
  border-right: 0.07142857142857142rem #eee solid;
  margin-bottom: 0.5rem;
  max-width: 15.642857142857142rem;
}

.c2 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
}

.c2:hover {
  background-color: #f8f8f8;
}

.c1 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
  border-top: 0.07142857142857142rem $zd-color-platinum solid;
  border-top-left-radius: 1.1428571428571428rem;
  border-top-right-radius: 1.1428571428571428rem;
  background: #f3f3f3;
  color: #333;
  padding: 0.6428571428571429rem 0.7142857142857143rem 0.5714285714285714rem;
  line-height: 1.0714285714285714rem;
}

.c1:hover {
  background-color: #f8f8f8;
}

<div>
  <div
    class="c0"
    data-testid="answer-bot-selection-message"
  >
    <div
      class="c1"
    >
      blah blah
    </div>
    <div
      class="c2"
    >
      <div
        class="channel singleChannel"
        data-testid="list-item"
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-contactForm"
          data-testid="Icon--channelChoice-contactForm"
          type="Icon--channelChoice-contactForm"
        >
          <svg
            aria-hidden="true"
            realfilename="widget-icon_channelChoice-contactForm.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Leave a message
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the expected classes 1`] = `
.c0 {
  display: inline-block;
  white-space: pre-wrap;
  border-radius: 1.1428571428571428rem;
  margin-left: 2.857142857142857rem;
  border-left: 0.07142857142857142rem #eee solid;
  border-right: 0.07142857142857142rem #eee solid;
  margin-bottom: 0.5rem;
  max-width: 15.642857142857142rem;
}

.c2 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
}

.c2:hover {
  background-color: #f8f8f8;
}

.c3 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
  border-bottom-left-radius: 1.1428571428571428rem;
  border-bottom-right-radius: 1.1428571428571428rem;
}

.c3:hover {
  background-color: #f8f8f8;
}

.c1 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
  border-top: 0.07142857142857142rem $zd-color-platinum solid;
  border-top-left-radius: 1.1428571428571428rem;
  border-top-right-radius: 1.1428571428571428rem;
  background: #f3f3f3;
  color: #333;
  padding: 0.6428571428571429rem 0.7142857142857143rem 0.5714285714285714rem;
  line-height: 1.0714285714285714rem;
}

.c1:hover {
  background-color: #f8f8f8;
}

<div>
  <div
    class="c0"
    data-testid="answer-bot-selection-message"
  >
    <div
      class="c1"
    >
      Choose a way to get in touch:
    </div>
    <div
      class="c2"
    >
      <div
        class="channel "
        data-testid="list-item"
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-chat"
          data-testid="Icon--channelChoice-chat"
          type="Icon--channelChoice-chat"
        >
          <svg
            aria-hidden="true"
            realfilename="widget-icon_channelChoice-chat.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Live chat
        </div>
      </div>
    </div>
    <div
      class="c2"
    >
      <div
        class="channel "
        data-testid="list-item"
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-talk"
          data-testid="Icon--channelChoice-talk"
          type="Icon--channelChoice-talk"
        >
          <svg
            aria-hidden="true"
            realfilename="widget-icon_channelChoice-talk.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Request a callback
        </div>
      </div>
    </div>
    <div
      class="c3"
    >
      <div
        class="channel "
        data-testid="list-item"
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-contactForm"
          data-testid="Icon--channelChoice-contactForm"
          type="Icon--channelChoice-contactForm"
        >
          <svg
            aria-hidden="true"
            realfilename="widget-icon_channelChoice-contactForm.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Leave a message
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the leading message 1`] = `
.c0 {
  display: inline-block;
  white-space: pre-wrap;
  border-radius: 1.1428571428571428rem;
  margin-left: 2.857142857142857rem;
  border-left: 0.07142857142857142rem #eee solid;
  border-right: 0.07142857142857142rem #eee solid;
  margin-bottom: 0.5rem;
  max-width: 15.642857142857142rem;
}

.c2 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
}

.c2:hover {
  background-color: #f8f8f8;
}

.c3 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
  border-bottom-left-radius: 1.1428571428571428rem;
  border-bottom-right-radius: 1.1428571428571428rem;
}

.c3:hover {
  background-color: #f8f8f8;
}

.c1 {
  cursor: pointer;
  border-bottom: 0.07142857142857142rem #eee solid;
  border-top: 0.07142857142857142rem $zd-color-platinum solid;
  border-top-left-radius: 1.1428571428571428rem;
  border-top-right-radius: 1.1428571428571428rem;
  background: #f3f3f3;
  color: #333;
  padding: 0.6428571428571429rem 0.7142857142857143rem 0.5714285714285714rem;
  line-height: 1.0714285714285714rem;
}

.c1:hover {
  background-color: #f8f8f8;
}

<div>
  <div
    class="c0"
    data-testid="answer-bot-selection-message"
  >
    <div
      class="c1"
    >
      hello world
    </div>
    <div
      class="c2"
    >
      <div
        class="channel "
        data-testid="list-item"
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-chat"
          data-testid="Icon--channelChoice-chat"
          type="Icon--channelChoice-chat"
        >
          <svg
            aria-hidden="true"
            realfilename="widget-icon_channelChoice-chat.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Live chat
        </div>
      </div>
    </div>
    <div
      class="c2"
    >
      <div
        class="channel "
        data-testid="list-item"
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-talk"
          data-testid="Icon--channelChoice-talk"
          type="Icon--channelChoice-talk"
        >
          <svg
            aria-hidden="true"
            realfilename="widget-icon_channelChoice-talk.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Request a callback
        </div>
      </div>
    </div>
    <div
      class="c3"
    >
      <div
        class="channel "
        data-testid="list-item"
        role="button"
        tabindex="0"
      >
        <span
          class="container icon Icon--channelChoice-contactForm"
          data-testid="Icon--channelChoice-contactForm"
          type="Icon--channelChoice-contactForm"
        >
          <svg
            aria-hidden="true"
            realfilename="widget-icon_channelChoice-contactForm.svg"
          />
        </span>
        <div
          class="optionText"
        >
          Leave a message
        </div>
      </div>
    </div>
  </div>
</div>
`;
